--- a/index.html
+++ b/index.html
@@ -1,67 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fred Okech | Developer Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fred Okech | Creative Developer</title>
+
+    <!-- Google Fonts for modern typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=JetBrains+Mono:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+
+
 </head>
+
 <body>
 
-  <header>
-    <nav>
-      <h1>Fred Okech</h1>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#playground">Code Playground</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <div class="logo">Fred<span class="gradient-text">Okech</span>.</div>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#playground">Code Playground</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section id="hero">
-      <h2>I build practical web solutions.</h2>
-      <p>Developer • Problem Solver • Lifelong Learner</p>
-    </section>
+    <main>
+        <!-- Hero Section with Particle Background -->
+        <section id="hero">
+            <canvas id="canvas-bg"></canvas>
+            <div class="hero-content fade-in-section">
+                <p class="hero-subtitle">Hi, my name is</p>
+                <h1 class="hero-title">Fred Okech.</h1>
+                <p class="hero-desc">
+                    I build practical, scalable web solutions and interactive
+                    digital experiences. Let's turn ideas into reality.
+                </p>
+                <div class="hero-btns">
+                    <a href="#projects" class="btn btn-primary">View Projects</a>
+                    <a href="#contact" class="btn btn-outline">Contact Me</a>
+                </div>
+            </div>
+        </section>
 
-    <section id="about">
-      <h2>About Me</h2>
-      <p>
-        I’m a developer with a strong foundation in web technologies and a passion
-        for building systems that actually solve problems.
-      </p>
-    </section>
+        <!-- About Section -->
+        <section id="about" class="fade-in-section">
+            <div class="section-header">
+                <h2>About Me</h2>
+            </div>
+            <div class="card">
+                <p>
+                    I’m a developer with a strong foundation in web technologies and a passion
+                    for building systems that actually solve problems.
+                    I bridge the gap between design and engineering, combining clean code
+                    with intuitive user interfaces. I am constantly learning new tools
+                    and frameworks to stay ahead in the fast-paced tech world.
+                </p>
+            </div>
+        </section>
 
-    <section id="projects">
-      <h2>Projects</h2>
-      <div class="project-card">
-        <h3>Sample Project</h3>
-        <p>Short description of what the project does.</p>
-        <a href="#">Live Demo</a> | <a href="#">GitHub</a>
-      </div>
-    </section>
+        <!-- Projects Section -->
+        <section id="projects" class="fade-in-section">
+            <div class="section-header">
+                <h2>Projects</h2>
+                <p>Some things I've built.</p>
+            </div>
 
-    <section id="playground">
-      <h2>Code Playground</h2>
-      <p>Try some of my JavaScript demos below.</p>
+            <div class="grid">
+                <!-- Project 1 -->
+                <div class="project-card card">
+                    <h3>Sample Project</h3>
+                    <p>A robust web application designed to handle user data efficiently. Built with a focus on
+                        scalability and speed.</p>
+                    <div class="card-links">
+                        <a href="#">Live Demo &rarr;</a>
+                        <a href="#">GitHub &rarr;</a>
+                    </div>
+                </div>
 
-      <div class="playground-card">
-        <h3>Palindrome Checker</h3>
-        <input type="text" id="palInput" placeholder="Enter a word" />
-        <button onclick="checkPalindrome()">Run</button>
-        <p id="palResult"></p>
-      </div>
-    </section>
+                <!-- Project 2 (Added for layout demonstration) -->
+                <div class="project-card card">
+                    <h3>E-Commerce API</h3>
+                    <p>A RESTful API solution for managing products, orders, and authentication. Handles secure
+                        transactions.</p>
+                    <div class="card-links">
+                        <a href="#">Live Demo &rarr;</a>
+                        <a href="#">GitHub &rarr;</a>
+                    </div>
+                </div>
 
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: fredokaych@gmail.com</p>
-      <p>GitHub: github.com/yourusername</p>
-    </section>
-  </main>
+                <!-- Project 3 -->
+                <div class="project-card card">
+                    <h3>Task Manager</h3>
+                    <p>A productivity tool to organize daily tasks with drag-and-drop functionality and local storage
+                        support.</p>
+                    <div class="card-links">
+                        <a href="#">Live Demo &rarr;</a>
+                        <a href="#">GitHub &rarr;</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-  <script src="script.js"></script>
+        <!-- Code Playground Section -->
+        <section id="playground" class="fade-in-section">
+            <div class="section-header">
+                <h2>Code Playground</h2>
+                <p>Interactive JavaScript demos.</p>
+            </div>
+
+            <div class="grid">
+                <div class="playground-card card playground-interface">
+                    <h3>Palindrome Checker</h3>
+                    <p>Enter a word or phrase below to check if it reads the same backward as forward.</p>
+
+                    <div class="input-group">
+                        <input type="text" id="palInput" placeholder="Enter a word..." autocomplete="off" />
+                        <button class="run-btn" onclick="checkPalindrome()">Run</button>
+                    </div>
+
+                    <div id="palResult" class="status-neutral">Waiting for input...</div>
+                </div>
+
+                <!-- Placeholder for another demo -->
+                <div class="playground-card card">
+                    <h3>Coming Soon</h3>
+                    <p>More interactive algorithms and visualizations are being cooked up. Stay tuned!</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="fade-in-section">
+            <div class="section-header">
+                <h2>Get In Touch</h2>
+                <p>I'm currently available for freelance work or full-time opportunities.</p>
+            </div>
+
+            <div class="contact-links">
+                <a href="mailto:fredokaych@gmail.com" class="contact-item">
+                    <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
+                        <path
+                            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
+                    </svg>
+                    fredokaych@gmail.com
+                </a>
+                <a href="https://github.com/yourusername" target="_blank" class="contact-item">
+                    <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
+                        <path
+                            d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0012 2z" />
+                    </svg>
+                    GitHub
+                </a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; <span id="year"></span> Fred Okech. Built with ❤️ and Code.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
