--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@
 
                 <!-- Project 2 (Added for layout demonstration) -->
                 <div class="project-card card">
-                    <h3>E-Commerce API</h3>
-                    <p>A RESTful API solution for managing products, orders, and authentication. Handles secure
-                        transactions.</p>
+                    <h3>Data Dashboard</h3>
+                    <p>A lightweight client-side dashboard built with pure HTML, CSS, and JavaScript.</p>
                     <div class="card-links">
-                        <a href="#">Live Demo &rarr;</a>
+                        <a href="projects/data-dashboard/index.html">Live Demo &rarr;</a>
                         <a href="#">GitHub &rarr;</a>
                     </div>
                 </div>
