--- a/projects/data-dashboard/index.html
+++ b/projects/data-dashboard/index.html
@@ -11,8 +11,18 @@
 <body>
 
     <header>
-        <h1>Education Data Dashboard</h1>
-        <p>Interactive analysis of school performance data</p>
+        <h2>Education Data Dashboard</h2>
+        <p>This project demonstrates my ability to design and implement a data-driven user interface using pure HTML,
+            CSS, and JavaScript without relying on external frameworks.
+
+            The dashboard consumes structured JSON data and dynamically renders key performance indicators, tabular
+            data, and a custom-built chart using the HTML Canvas API. The focus was on clean separation of concerns,
+            readable code structure, and efficient DOM manipulation.
+
+            While the current implementation uses mock data, the architecture mirrors real-world dashboards and can be
+            easily extended to consume live APIs, support filtering, or scale to larger datasets. This project
+            highlights my understanding of front-end fundamentals, data visualization principles, and maintainable
+            JavaScript design.</p>
     </header>
 
     <section class="metrics">
