--- a/index.html
+++ b/index.html
@@ -80,21 +80,26 @@
             <div class="grid">
                 <!-- Project 1 -->
                 <div class="project-card card">
-                    <h3>Sample Project</h3>
-                    <p>A robust web application designed to handle user data efficiently. Built with a focus on
-                        scalability and speed.</p>
+                    <h3>Offline-First Notes App</h3>
+                    <p>
+                        A resilient web application built with an offline-first architecture.
+                        The app remains fully functional without internet connectivity by caching
+                        assets via Service Workers, persisting user data locally, and queuing
+                        changes for synchronization once the network is restored.
+                    </p>
                     <div class="card-links">
-                        <a href="#">Live Demo &rarr;</a>
-                        <a href="#">GitHub &rarr;</a>
+                        <a href="offline-notes/index.html" target="_blank">Live Demo &rarr;</a>
+                        <a href="https://github.com/yourusername/offline-notes" target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
 
-                <!-- Project 2 (Added for layout demonstration) -->
+
+                <!-- Project 2 -->
                 <div class="project-card card">
                     <h3>Data Dashboard</h3>
                     <p>A lightweight client-side dashboard built with pure HTML, CSS, and JavaScript.</p>
                     <div class="card-links">
-                        <a href="projects/data-dashboard/index.html">Live Demo &rarr;</a>
+                        <a href="projects/data-dashboard/index.html" target="_blank">Live Demo &rarr;</a>
                         <a href="#">GitHub &rarr;</a>
                     </div>
                 </div>
@@ -155,7 +160,7 @@
                     </svg>
                     fredokaych@gmail.com
                 </a>
-                <a href="https://github.com/yourusername" target="_blank" class="contact-item">
+                <a href="https://github.com/fredokaych" target="_blank" class="contact-item">
                     <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                         <path
                             d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0012 2z" />
