--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                         changes for synchronization once the network is restored.
                     </p>
                     <div class="card-links">
-                        <a href="offline-notes/index.html" target="_blank">Live Demo &rarr;</a>
-                        <a href="https://github.com/yourusername/offline-notes" target="_blank">GitHub &rarr;</a>
+                        <a href="projects/offline-notes/index.html" target="_blank">Live Demo &rarr;</a>
+                        <a href="https://github.com/fredokaych/offline-notes" target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
 
