Tech stacks addition

--- a/index.html
+++ b/index.html
@@ -87,9 +87,13 @@
                         assets via Service Workers, persisting user data locally, and queuing
                         changes for synchronization once the network is restored.
                     </p>
+                    <p class="tech-stack">
+                        HTML • CSS • JavaScript • Service Workers • LocalStorage
+                    </p>
                     <div class="card-links">
                         <a href="projects/offline-notes/index.html" target="_blank">Live Demo &rarr;</a>
-                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/offline-notes" target="_blank">GitHub &rarr;</a>
+                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/offline-notes"
+                            target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
 
@@ -98,9 +102,14 @@
                 <div class="project-card card">
                     <h3>Data Dashboard</h3>
                     <p>A lightweight client-side dashboard built with pure HTML, CSS, and JavaScript.</p>
+                    <p class="tech-stack">
+                        HTML • CSS • JavaScript • Canvas API • JSON
+                    </p>
+
                     <div class="card-links">
                         <a href="projects/data-dashboard/index.html" target="_blank">Live Demo &rarr;</a>
-                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/data-dashboard" target="_blank">GitHub &rarr;</a>
+                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/data-dashboard"
+                            target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
 
