Pathfinding Algorithm project added

--- a/index.html
+++ b/index.html
@@ -115,14 +115,25 @@
 
                 <!-- Project 3 -->
                 <div class="project-card card">
-                    <h3>Task Manager</h3>
-                    <p>A productivity tool to organize daily tasks with drag-and-drop functionality and local storage
-                        support.</p>
+                    <h3>Pathfinding Algorithm Visualizer</h3>
+
+                    <p>
+                        An interactive in-browser visualization engine for graph traversal algorithms.
+                        Built from scratch using vanilla JavaScript, it renders a dynamic grid,
+                        supports real-time wall editing, and animates BFS, DFS, and A* step-by-step
+                        with adjustable execution speed.
+                    </p>
+
+                    <p class="tech-stack">
+                        HTML • CSS • JavaScript • Algorithms • State Management • DOM Rendering
+                    </p>
+
                     <div class="card-links">
-                        <a href="#">Live Demo &rarr;</a>
-                        <a href="#">GitHub &rarr;</a>
+                        <a href="#" target="_blank">Live Demo &rarr;</a>
+                        <a href="#" target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
+
             </div>
         </section>
 
