--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     </p>
 
                     <div class="card-links">
-                        <a href="#" target="_blank">Live Demo &rarr;</a>
-                        <a href="#" target="_blank">GitHub &rarr;</a>
+                        <a href="projects/pathfinding-visualizer/index.html" target="_blank">Live Demo &rarr;</a>
+                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/pathfinding-visualizer" target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
 
