--- a/index.html
+++ b/index.html
@@ -108,10 +108,29 @@
 
                     <div class="card-links">
                         <a href="projects/data-dashboard/index.html" target="_blank">Live Demo &rarr;</a>
-                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/data-dashboard"
-                            target="_blank">GitHub &rarr;</a>
+                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/data-dashboard" target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
+
+                <div class="project-card card">
+                    <h3>Education Data Dashboard</h3>
+
+                    <p>
+                        A dynamic, interactive dashboard that visualizes school performance data.
+                        Built with pure HTML, CSS, and JavaScript, it supports county and level filters,
+                        displays KPIs, tabular data, and renders custom charts using the Canvas API.
+                    </p>
+
+                    <p class="tech-stack">
+                        HTML • CSS • JavaScript • Data Visualization • DOM Manipulation • Canvas API
+                    </p>
+
+                    <div class="card-links">
+                        <a href="projects/data-dashboard/index.html" target="_blank">Live Demo &rarr;</a>
+                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/data-dashboard" target="_blank">GitHub &rarr;</a>
+                    </div>
+                </div>
+
 
                 <!-- Project 3 -->
                 <div class="project-card card">
@@ -130,7 +149,8 @@
 
                     <div class="card-links">
                         <a href="projects/pathfinding-visualizer/index.html" target="_blank">Live Demo &rarr;</a>
-                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/pathfinding-visualizer" target="_blank">GitHub &rarr;</a>
+                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/pathfinding-visualizer"
+                            target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
 
