--- a/index.html
+++ b/index.html
@@ -79,17 +79,21 @@
 
             <div class="grid">
                 <!-- Project 1 -->
+
                 <div class="project-card card">
-                    <h3>Offline-First Notes App</h3>
+                    <h3>Pathfinding Algorithm Visualizer</h3>
+
                     <p>
-                        A resilient web application built with an offline-first architecture.
-                        The app remains fully functional without internet connectivity by caching
-                        assets via Service Workers, persisting user data locally, and queuing
-                        changes for synchronization once the network is restored.
+                        An interactive in-browser visualization engine for graph traversal algorithms.
+                        Built from scratch using vanilla JavaScript, it renders a dynamic grid,
+                        supports real-time wall editing, and animates BFS, DFS, and A* step-by-step
+                        with adjustable execution speed.
                     </p>
+
                     <p class="tech-stack">
-                        HTML • CSS • JavaScript • Service Workers • LocalStorage
+                        HTML • CSS • JavaScript • Algorithms • State Management • DOM Rendering
                     </p>
+
                     <div class="card-links">
                         <a href="projects/offline-notes/index.html" target="_blank">Live Demo &rarr;</a>
                         <a href="https://github.com/fredokaych/portfolio/tree/main/projects/offline-notes"
@@ -98,19 +102,9 @@
                 </div>
 
 
-                <!-- Project 2 -->
-                <div class="project-card card">
-                    <h3>Data Dashboard</h3>
-                    <p>A lightweight client-side dashboard built with pure HTML, CSS, and JavaScript.</p>
-                    <p class="tech-stack">
-                        HTML • CSS • JavaScript • Canvas API • JSON
-                    </p>
 
-                    <div class="card-links">
-                        <a href="projects/data-dashboard/index.html" target="_blank">Live Demo &rarr;</a>
-                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/data-dashboard" target="_blank">GitHub &rarr;</a>
-                    </div>
-                </div>
+                <!-- Project 2 -->
+
 
                 <div class="project-card card">
                     <h3>Education Data Dashboard</h3>
@@ -127,24 +121,28 @@
 
                     <div class="card-links">
                         <a href="projects/data-dashboard/index.html" target="_blank">Live Demo &rarr;</a>
-                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/data-dashboard" target="_blank">GitHub &rarr;</a>
+                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/data-dashboard"
+                            target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
 
 
                 <!-- Project 3 -->
+
+
+
+
                 <div class="project-card card">
-                    <h3>Pathfinding Algorithm Visualizer</h3>
+                    <h3>Offline-First Task Manager</h3>
 
                     <p>
-                        An interactive in-browser visualization engine for graph traversal algorithms.
-                        Built from scratch using vanilla JavaScript, it renders a dynamic grid,
-                        supports real-time wall editing, and animates BFS, DFS, and A* step-by-step
-                        with adjustable execution speed.
+                        A progressive web app that functions fully offline, allowing task creation,
+                        editing, and deletion. Implements Service Workers for caching and LocalStorage
+                        for persistent offline state, with simulated sync when online.
                     </p>
 
                     <p class="tech-stack">
-                        HTML • CSS • JavaScript • Algorithms • State Management • DOM Rendering
+                        HTML • CSS • JavaScript • Service Workers • LocalStorage • PWA Principles
                     </p>
 
                     <div class="card-links">
@@ -153,6 +151,8 @@
                             target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
+
+
 
             </div>
         </section>
