--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
 
                     <p>
                         An interactive in-browser visualization engine for graph traversal algorithms.
-                        Built from scratch using vanilla JavaScript, it renders a dynamic grid,
-                        supports real-time wall editing, and animates BFS, DFS, and A* step-by-step
+                        Built from scratch using vanilla JavaScript, it renders a dynamic grid and animates BFS, DFS, and A* step-by-step
                         with adjustable execution speed.
                     </p>
 
