--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 
                     <p>
                         An interactive in-browser visualization engine for graph traversal algorithms.
-                        Built from scratch using vanilla JavaScript, it renders a dynamic grid and animates BFS, DFS, and A* step-by-step
+                        Built from scratch using vanilla JavaScript, it renders a dynamic grid and animates BFS, DFS,
+                        and A* step-by-step
                         with adjustable execution speed.
                     </p>
 
@@ -93,9 +94,10 @@
                         HTML • CSS • JavaScript • Algorithms • State Management • DOM Rendering
                     </p>
 
+
                     <div class="card-links">
-                        <a href="projects/offline-notes/index.html" target="_blank">Live Demo &rarr;</a>
-                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/offline-notes"
+                        <a href="projects/pathfinding-visualizer/index.html" target="_blank">Live Demo &rarr;</a>
+                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/pathfinding-visualizer"
                             target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
@@ -145,8 +147,8 @@
                     </p>
 
                     <div class="card-links">
-                        <a href="projects/pathfinding-visualizer/index.html" target="_blank">Live Demo &rarr;</a>
-                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/pathfinding-visualizer"
+                        <a href="projects/offline-notes/index.html" target="_blank">Live Demo &rarr;</a>
+                        <a href="https://github.com/fredokaych/portfolio/tree/main/projects/offline-notes"
                             target="_blank">GitHub &rarr;</a>
                     </div>
                 </div>
