--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
         <section id="projects" class="fade-in-section">
             <div class="section-header">
                 <h2>Projects</h2>
-                <p>Some things I've built.</p>
+                <p>Stuff I’ve coded, debugged, and pushed live. Can build more. Can scale bigger. Only your imagination
+                    sets the limits.</p>
             </div>
+
 
             <div class="grid">
                 <!-- Project 1 -->
