--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
         <!-- About Section -->
         <section id="about" class="fade-in-section">
+
             <div class="section-header">
                 <h2>About Me</h2>
             </div>
@@ -66,6 +67,8 @@
                     I bridge the gap between design and engineering, combining clean code
                     with intuitive user interfaces. I am constantly learning new tools
                     and frameworks to stay ahead in the fast-paced tech world.
+                    I write code that actually does stuff. Frontend, backend, or both. If it solves problems, I’m on it.
+                    Constantly learning, always shipping.
                 </p>
             </div>
         </section>
@@ -186,6 +189,25 @@
                     <p>More interactive algorithms and visualizations are being cooked up. Stay tuned!</p>
                 </div>
             </div>
+            <div class="project-card card">
+                <h3>Upcoming Algorithm Demos</h3>
+
+                <p>
+                    Interactive algorithm experiments under development, including sorting visualizations,
+                    recursion simulators, and dynamic programming demos. Showcases a modular, reusable engine
+                    for client-side algorithm visualization.
+                </p>
+
+                <p class="tech-stack">
+                    HTML • CSS • JavaScript • DOM Rendering • State Management • Animations
+                </p>
+
+                <div class="card-links">
+                    <a href="#" target="_blank">Live Demo &rarr;</a>
+                    <a href="#" target="_blank">GitHub &rarr;</a>
+                </div>
+            </div>
+
         </section>
 
         <!-- Contact Section -->
