--- a/index.html
+++ b/index.html
@@ -150,6 +150,31 @@
             </div>
         </section>
 
+        <section class="partners">
+            <h2>Organizations I’ve Worked With</h2>
+
+            <div class="logo-slider">
+                <div class="logo-track">
+                    <!-- Repeat logos twice for seamless looping -->
+                    <img src="images/glory.jpg" alt="Wells Mountain Initiative">
+                    <img src="images/jkuat.png" alt="JKUAT">
+                    <img src="images/un.png" alt="United Nations">
+                    <img src="images/stkevin.jpg" alt="St. Kevin Hill Schools">
+                    <img src="images/malili.jpg" alt="Malili Distributors">
+                    <img src="images/wmi.png" alt="WMI">
+
+                    <!-- Duplicate -->
+                    <img src="images/glory.jpg">
+                    <img src="images/jkuat.png">
+                    <img src="images/un.png">
+                    <img src="images/stkevin.jpg">
+                    <img src="images/malili.jpg">
+                    <img src="images/wmi.png">
+                </div>
+            </div>
+        </section>
+
+
         <!-- CODE PLAYGROUND SECTION -->
         <section id="playground" class="fade-in-section" aria-labelledby="playground-header">
             <div class="section-header">
