--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                     <img src="images/stkevin.jpg" alt="St. Kevin Hill Schools">
                     <img src="images/malili.jpg" alt="Malili Distributors">
                     <img src="images/wmi.png" alt="WMI">
+                    <img src="images/medruok.png" alt="Medruok">
 
                     <!-- Duplicate -->
                     <img src="images/glory.jpg">
@@ -170,6 +171,7 @@
                     <img src="images/stkevin.jpg">
                     <img src="images/malili.jpg">
                     <img src="images/wmi.png">
+                    <img src="images/medruok.png">
                 </div>
             </div>
         </section>
